# ProjectFocusToDo

./: Description.md
BackendFocustodo/final_project/: Description.md  README.md  main.py  pyproject.toml  users.json
BackendFocustodo/final_project/project/: client.py  composite.py  notification.py  pomodoro.py  report_factory.py  subscription.py  user_auth.py
BackendFocustodo/final_project/tests/: __init__.py
